--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "test": "npx playwright test",
+    "test:uat": "cross-env ENVIRONMENT=uat npx playwright test",
+    "test:prod": "cross-env ENVIRONMENT=prod npx playwright test",
     "show-report": "allure generate ./allure-results --clean & allure open ./allure-report -h localhost -p 8081"
   },
   "keywords": [],
@@ -14,7 +17,8 @@
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.17",
     "allure-commandline": "^2.34.0",
-    "allure-playwright": "^3.2.2"
+    "allure-playwright": "^3.2.2",
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
     "@axe-core/playwright": "^4.10.1",
